AUTHORS: add another translator for Spanish

--- a/AUTHORS
+++ b/AUTHORS
@@ -100,6 +100,9 @@ Giuseppe De Robertis <giuseppe.derobertis@ba.infn.it>
     * Option --fix-bitstream-timing-information & implementation for
       AVC/H.264
 
+GPL-advocate <adrlopgal@disroot.org>
+    * Spanish translation
+
 Grzegorz Pruchniakowski <gootector@o2.pl>
     * Polish translation
 
