--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (78.0-0~bunkus01) lunar; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 02 Jul 2023 22:01:26 +0200
+
 mkvtoolnix (77.0-0~bunkus01) lunar; urgency=low
 
   * New version.
