NEWS & AUTHORS: add entries for color support in teletext subtitles

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,9 @@ Aaron Robinson <Aaron.Robinson@rovicorp.com>
 Alexandr Grigorcea <cahr.gr@gmail.com>
     * Icons for mmg, mkvinfo GUI
 
+Angela Schmid <?@?>
+    * mkvmerge: support for colors in teletext subtitles
+
 Andreas Rheinhardt <andreas.rheinhardt@googlemail.com>
     * mkvmerge, mkvextract: removal of empty NALUs
 
