program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-06-15 23:04+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Germano Fonseca <celger@bol.com.br>, 2016,2023\n"
+"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2023\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -1965,7 +1965,7 @@ msgstr "&Ativado"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2231
 #, no-c-format
 msgid "&Ensure at least one track of each type has its \"track enabled\" flag set"
-msgstr "C&ertifique-se de que pelo menos uma faixa de cada tipo tenha sua flag \"faixa ativada\" definida"
+msgstr "C&ertificar-se de que pelo menos uma faixa de cada tipo tenha sua flag \"faixa ativada\" definida"
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:119
 #, no-c-format
@@ -2165,7 +2165,7 @@ msgstr "&Número de entradas para renumerar:"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2295
 #, no-c-format
 msgid "&Only enable copying of tracks with specific languages by default"
-msgstr "&Só ativar cópia de faixas com idiomas específicos por padrão"
+msgstr "Por padrão, ativar apenas a &cópia de faixas com idiomas específicos"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2206
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2208
@@ -2177,7 +2177,7 @@ msgstr "Incluir &apenas entradas frequentemente usadas nas seleções"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2281
 #, no-c-format
 msgid "&Only use the first source file that contains a video track"
-msgstr "&Só usar o primeiro arquivo de origem que contém uma faixa de vídeo"
+msgstr "U&sar apenas o primeiro arquivo de origem que contém uma faixa de vídeo"
 
 #: src/mkvtoolnix-gui/forms/header_editor/tool.h:180
 #: src/mkvtoolnix-gui/forms/info/tool.h:180
@@ -3674,7 +3674,7 @@ msgstr "Todos os arquivos de destino"
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:159
 #, no-c-format
 msgid "All elements in a tree-like structure"
-msgstr "Todos elementos em uma estrutura tipo árvore"
+msgstr "Todos os elementos em uma estrutura tipo árvore"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/renumber_sub_chapters_parameters_dialog.h:177
 #, no-c-format
@@ -5030,7 +5030,7 @@ msgstr "Transferência de cores"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Comunidade e fórum de &ajuda"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
@@ -11467,7 +11467,7 @@ msgstr "Mostrar todos os bytes de quadros e elementos CodecPrivate como despejos
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:164
 #, no-c-format
 msgid "Show all elements"
-msgstr "Mostrar todos elementos"
+msgstr "Mostrar todos os elementos"
 
 #: src/info/info_cli_parser.cpp:35
 #, no-c-format
@@ -11880,7 +11880,7 @@ msgstr "Armazenar as alterações nos dados CodecPrivate em elementos CodecState
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache filed"
-msgstr ""
+msgstr "Armazenando resultado no arquivo de cache"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
