program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -8471,9 +8471,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Idioma (BCP 47 de l'IETF)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Idioma seleccionat a sota"
+msgstr "Idioma (en desús)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11735,9 +11735,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "Especifica un gir de l'encaix a la projecció."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "Especifica l'idioma de la pista."
+msgstr "Especifica l'idioma de la pista (en desús)."
 
 #: src/common/property_element.cpp:144
 #, no-c-format
