program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-07-11 20:59+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: GPL-advocate <adrlopgal@disroot.org>, 2023\n"
+"Last-Translator: Casper, 2023\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -8503,9 +8503,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Idioma (IETF BCP 47)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Idioma seleccionado más abajo"
+msgstr "Idioma (obsoleto)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11776,9 +11776,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "Especifica la rotación vertical de la proyección."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "Especifica el idioma de la pista."
+msgstr "Especifica el idioma de la pista (obsoleto)."
 
 #: src/common/property_element.cpp:144
 #, no-c-format
