program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -8423,9 +8423,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Langue (IETF BCP 47)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Langue sélectionnée ci-dessous"
+msgstr "Langue (obsolète)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11695,9 +11695,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "Spécifie une rotation en lacet de la projection."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "Spécifie la langue de la piste."
+msgstr "Spécifie la langue de la piste (obsolète)."
 
 #: src/common/property_element.cpp:144
 #, no-c-format
