program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8437,9 +8437,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Lingua tag (IETF BCP 47)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Lingua selezionata di seguito"
+msgstr "Lingua (obsoleta)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11716,9 +11716,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "Specifica lo spostamento della rotazione della proiezione."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "Specifica la lingua della traccia."
+msgstr "Specifica la lingua della traccia (obsoleta)."
 
 #: src/common/property_element.cpp:144
 #, no-c-format
