program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -8178,9 +8178,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Язык (IETF BCP 47)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Язык, выбранный ниже"
+msgstr "Язык (устрарело)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11461,9 +11461,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "Определяет параметры поворота проекции вокруг перпендикулярной оси."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "Указывает язык дорожки."
+msgstr "Указывает язык дорожки (устарело)."
 
 #: src/common/property_element.cpp:144
 #, no-c-format
