program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -8394,9 +8394,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Dil (IETF BCP 47)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Aşağıda seçilen dil"
+msgstr "Dil (eski)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11655,9 +11655,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "İzdüşüme bir sapma dönüşü belirler."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "İzin dilini belirtir."
+msgstr "İzin dilini belirtir (eski)."
 
 #: src/common/property_element.cpp:144
 #, no-c-format
@@ -12245,24 +12245,24 @@ msgstr "'{0}' bağımsız değişkenine tanımlama kipinde izin verilmez.\n"
 #: src/merge/mkvmerge.cpp:1046
 #: src/merge/mkvmerge.cpp:1052
 #: src/merge/mkvmerge.cpp:1058
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The argument '{0}' to '{1}' is invalid."
-msgstr "Araştırma aralığı yüzdesi '{0}' geçersiz.\n"
+msgstr "'{0}' bağımsız değişkeni '{1}' olarak geçersiz."
 
 #: src/merge/mkvmerge.cpp:1927
 #, no-c-format
 msgid "The argument '{0}' to '{1}' is invalid: '{2}' is not a valid track ID.\n"
-msgstr ""
+msgstr "'{0}' bağımsız değişkeni '{1}' olarak geçersiz: '{2}', geçerli bir iz kimliği değil.\n"
 
 #: src/merge/mkvmerge.cpp:1936
 #, no-c-format
 msgid "The argument '{0}' to '{1}' is invalid: '{2}' must be either 'all' or 'first'.\n"
-msgstr ""
+msgstr "'{0}' bağımsız değişkeni '{1}' olarak geçersiz: '{2}', 'all' veya 'first' olmak zorundadır.\n"
 
 #: src/merge/mkvmerge.cpp:1923
 #, no-c-format
 msgid "The argument '{0}' to '{1}' is invalid: too many colons in element '{2}'.\n"
-msgstr ""
+msgstr "'{0}' bağımsız değişkeni '{1}' olarak geçersiz: '{2}' öğesinde çok fazla iki nokta üst üste.\n"
 
 #: src/merge/mkvmerge.cpp:1886
 #, no-c-format
@@ -12902,7 +12902,7 @@ msgstr "Açmaya çalıştığınız dosya (%1) ne geçerli bir Matroska ne de ge
 #: src/extract/extract_cli_parser.cpp:66
 #, no-c-format
 msgid "The first argument must be the name of source file."
-msgstr ""
+msgstr "İlk bağımsız değişken kaynak dosyanın adı olmak zorundadır."
 
 #: src/common/kax_file.cpp:51
 #, no-c-format
@@ -13370,7 +13370,7 @@ msgstr "'%1' senaryosu kullanım dışıdır."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr ""
+msgstr "Bu dil için belgelerin büyük çoğunluğunun yazıldığı kodlama kodu bu olduğundan, '%1' komut kodu '%2' dili için kullanılmamalıdır."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -15433,12 +15433,12 @@ msgstr "Tüm bloklar için süreleri yazar."
 #: src/extract/extract_cli_parser.cpp:100
 #, no-c-format
 msgid "Write the attachment with the ID 'AID' to 'outname'."
-msgstr ""
+msgstr "'AID' kimliğine sahip eki 'outname' olarak yazın."
 
 #: src/extract/extract_cli_parser.cpp:83
 #, no-c-format
 msgid "Write track with the ID TID to the file 'out'."
-msgstr ""
+msgstr "TID kimliğine sahip izi 'out' dosyasına yazın."
 
 #: src/common/kax_element_names.cpp:89
 #: src/common/property_element.cpp:127
@@ -16321,37 +16321,37 @@ msgstr "içinden geçen"
 #: src/common/audio_emphasis.cpp:63
 #, no-c-format
 msgid "phono filter (Columbia LP)"
-msgstr ""
+msgstr "phono süzgeci (Kolombiya LP)"
 
 #: src/common/audio_emphasis.cpp:62
 #, no-c-format
 msgid "phono filter (EMI)"
-msgstr ""
+msgstr "phono süzgeci (EMI)"
 
 #: src/common/audio_emphasis.cpp:60
 #, no-c-format
 msgid "phono filter (IEC N78)"
-msgstr ""
+msgstr "phono süzgeci (IEC N78)"
 
 #: src/common/audio_emphasis.cpp:64
 #, no-c-format
 msgid "phono filter (London)"
-msgstr ""
+msgstr "phono süzgeci (Londra)"
 
 #: src/common/audio_emphasis.cpp:65
 #, no-c-format
 msgid "phono filter (NARTB)"
-msgstr ""
+msgstr "phono süzgeci (NARTB)"
 
 #: src/common/audio_emphasis.cpp:59
 #, no-c-format
 msgid "phono filter (RIAA)"
-msgstr ""
+msgstr "phono süzgeci (RIAA)"
 
 #: src/common/audio_emphasis.cpp:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "phono filter (Teldec)"
-msgstr "yüklenen dosya yok"
+msgstr "phono süzgeci (Teldec)"
 
 #: src/common/kax_info.cpp:627
 #, no-c-format
