update German translation

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.3.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-07-21 13:53+0200\n"
-"PO-Revision-Date: 2023-07-21 14:01+0200\n"
+"PO-Revision-Date: 2023-07-22 20:58+0200\n"
 "Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
 "Language-Team: German <moritz@bunkus.org>\n"
 "Language: de\n"
@@ -5753,7 +5753,7 @@ msgstr "Abhängig von dieser Einstellung kann die Sprache auch dann aus Dateinam
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
 #, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "»Anzeige erzwungen«-&Schalter für Unteritel von Dateinamen ableiten:"
+msgstr "»Anzeige erzwingen«-&Schalter für Unteritel von Dateinamen ableiten:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -12128,7 +12128,7 @@ msgstr "Das GUI kann diese Dateien durchsuchen, die Ergebnisse inklusive der Dau
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr "Die GUI kann den Schalter für »Anzeige erzwungen« für solche Spuren setzen, wenn der Dateiname diesem regulären Ausdruck entspricht."
+msgstr "Die GUI kann den Schalter für »Anzeige erzwingen« für solche Spuren setzen, wenn der Dateiname diesem regulären Ausdruck entspricht."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13759,7 +13759,7 @@ msgstr "Der Wert folgt nicht der allgemeinen Struktur von IETF-BCP-47-/RFC-5646-
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr "Der Wert fürs Ableiten des »Anzeige erzwungen«-Schalters aus Dateinamen muss ein gültiger regulärer Ausdruck sein."
+msgstr "Der Wert fürs Ableiten des »Anzeige erzwingen«-Schalters aus Dateinamen muss ein gültiger regulärer Ausdruck sein."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
