--- a/po/ca.po
+++ b/po/ca.po
@@ -5793,9 +5793,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Depenent d'aquest ajustament, l'idioma també podrà derivar del nom del fitxer si l'idioma al fitxer d'origen és «undetermined» («und»)."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Deriva el seguiment dels idiomes dels noms de fitxers"
+msgstr "Deriva l'e&tiqueta «Força el mostrar» per als subtítols dels noms de fitxer:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -11926,7 +11926,7 @@ msgstr "Propietats dels subtítols i capítols"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:518
 #, no-c-format
 msgid "Subtitle files often contain the word 'forced' in their file name to signal that they're intended for 'forced display' only (e.g. when they speak Elfish in 'Lord of the Rings')."
-msgstr ""
+msgstr "Els fitxers de subtítols sovint contenen la paraula «forced» en el nom del fitxer per a indicar que només estan destinats a «Força el mostrar» (p. ex., quan Elfish parla a «El Senyor dels Anells»)."
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:56
 #, no-c-format
@@ -12173,7 +12173,7 @@ msgstr "La IGU pot analitzar aquests fitxers, presentar els resultats, inclosa l
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr ""
+msgstr "La IGU pot establir l'etiqueta «Força el mostrar» per a aquestes pistes si el nom del fitxer coincideix amb aquesta expressió regular."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13801,7 +13801,7 @@ msgstr "El valor no s'adhereix a l'estructura general de les etiquetes d'idioma 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "El valor per a obtenir l'etiqueta de «Força el mostrar» per als subtítols a partir dels noms de fitxer haurà de ser una expressió regular vàlida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
