program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -5756,9 +5756,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "In modo dipendente da questa impostazione sottostante la lingua può anche derivare dal nome file se la lingua nella sorgente è 'indeterminata' ('und')."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Lingue traccia derivata dai nomi file"
+msgstr "Deriva il flag \"visualizzazione forzata\" per i sottotitoli dai nomi dei file:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -11909,7 +11909,7 @@ msgstr "Proprietà sottotitoli e capitoli"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:518
 #, no-c-format
 msgid "Subtitle files often contain the word 'forced' in their file name to signal that they're intended for 'forced display' only (e.g. when they speak Elfish in 'Lord of the Rings')."
-msgstr ""
+msgstr "I file dei sottotitoli spesso contengono la parola \"forzato\" nel nome del file per segnalare che sono destinati solo alla \"visualizzazione forzata\" (ad esempio quando parlano Elfish in \"Il Signore degli Anelli\")."
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:56
 #, no-c-format
@@ -12159,7 +12159,7 @@ msgstr "La GUI può ricercare questi file, presentare i risultati includendo dur
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr ""
+msgstr "Se il nome del file corrisponde a questa espressione regolare la GUI può impostare il flag di \"visualizzazione forzata\" per tali tracce."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13795,7 +13795,7 @@ msgstr "Il valore non è conforme alla struttura generale dei tag lingua IETF BC
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "Il valore per derivare il flag di \"visualizzazione forzata\" per i sottotitoli dai nomi dei file deve essere un'espressione regolare valida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
