program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -521,7 +521,7 @@ msgid ""
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
 "  --forced-display-flag <TID[:bool]>\n"
-"                           Bu iz için \"zorlanan görüntü\" işaretini ayarlar veya\n"
+"                           Bu iz için \"zorunlu görüntüle\" işaretini ayarlar veya\n"
 "                           bool 0 ise mevcut olmamaya zorlar.\n"
 
 #: src/merge/mkvmerge.cpp:113
@@ -1474,14 +1474,14 @@ msgstr "\"Etkinleştirildi\" işareti"
 #: src/common/property_element.cpp:136
 #, no-c-format
 msgid "\"Forced display\" flag"
-msgstr "\"Zorlanan görüntü\" işareti"
+msgstr "\"Zorunlu görüntüle\" işareti"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:311
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2207
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:93
 #, no-c-format
 msgid "\"Forced display\" flag:"
-msgstr "\"Zorlanan görüntü\" işareti:"
+msgstr "\"Zorunlu görüntüle\" işareti:"
 
 #: src/common/kax_element_names.cpp:216
 #: src/common/property_element.cpp:137
@@ -5717,9 +5717,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Bu ayara bağlı olarak dil aynı zamanda, kaynak dosyadaki dil 'belirsiz' ('und') ise dosya adından türetilebilir."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Dosya adlarından türetilen iz dilleri"
+msgstr "Dosya adlarından altyazılar için \"zorunlu görüntüle\" iş&aretini türet:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -6998,7 +6998,7 @@ msgstr "Kullanmak için çevirileri 'kod'a zorla."
 #: src/mkvtoolnix-gui/merge/track_model.cpp:80
 #, no-c-format
 msgid "Forced display"
-msgstr "Zorlanan görüntü"
+msgstr "Zorunlu görüntüle"
 
 #: src/common/hacks.cpp:41
 #, no-c-format
@@ -8708,7 +8708,7 @@ msgstr "Bu izi \"etkinleştirildi\" (varsayılan) veya \"etkisizleştirildi\" ol
 #: src/mkvtoolnix-gui/merge/input.cpp:561
 #, no-c-format
 msgid "Mark this track as \"forced display\"."
-msgstr "Bu izi \"zorlanan görüntü\" olarak işaretler."
+msgstr "Bu izi \"zorunlu görüntüle\" olarak işaretler."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:658
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:669
@@ -11846,7 +11846,7 @@ msgstr "Altyazı ve bölüm özellikleri"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:518
 #, no-c-format
 msgid "Subtitle files often contain the word 'forced' in their file name to signal that they're intended for 'forced display' only (e.g. when they speak Elfish in 'Lord of the Rings')."
-msgstr ""
+msgstr "Altyazı dosyalarının dosya adlarında, sadece 'zorunlu görüntüle'meyi amaçlayan işaretleme için genellikle 'forced' kelimesi bulunur (örn., 'Yüzüklerin Efendisi'nde Elfçe dilinde konuştuklarında)."
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:56
 #, no-c-format
@@ -12093,7 +12093,7 @@ msgstr "GKA bu dosyaları tarayabilir, bulunan her oynatma listesinin iz sayıla
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr ""
+msgstr "Dosya adı bu düzenli ifadeyle eşleşirse, GKA bu tür izler için 'zorunlu görüntüle' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13718,7 +13718,7 @@ msgstr "Değer, IETF BCP 47/RFC 5646 dil etiketlerinin genel yapısına uymuyor.
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "Dosya adlarından altyazılar için 'zorunlu görüntüle' işaretini türetme değeri geçerli bir düzenli ifade olmak zorundadır."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
@@ -14254,7 +14254,7 @@ msgstr "\"&Varsayılan iz\" işaretini değiştir"
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:109
 #, no-c-format
 msgid "Toggle \"&forced display\" flag"
-msgstr "\"&Zorlanan görüntü\" işaretini değiştir"
+msgstr "\"&Zorunlu görüntüle\" işaretini değiştir"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:112
 #, no-c-format
