--- a/po/fr.po
+++ b/po/fr.po
@@ -5745,9 +5745,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Suivant ce paramètre, la langue peut aussi être déduite du nom de fichier si la langue du fichier source est « undetermined » (« und »)."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Déduction des langues de pistes depuis les noms de  fichiers"
+msgstr "Dériver l'indicateur « affichage forcé » pour les sous-titres de noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -11888,7 +11888,7 @@ msgstr "Propriétés des sous-titres et des chapitres"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:518
 #, no-c-format
 msgid "Subtitle files often contain the word 'forced' in their file name to signal that they're intended for 'forced display' only (e.g. when they speak Elfish in 'Lord of the Rings')."
-msgstr ""
+msgstr "Les fichiers de sous-titres contiennent souvent le mot « forcé » dans leur nom de fichier pour indiquer qu'ils sont seulement destinés à un « affichage forcé » (par ex. quand ils parlent en Elfish dans « Le seigneur des anneaux »)."
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:56
 #, no-c-format
@@ -12136,7 +12136,7 @@ msgstr "L'interface peut examiner ces fichiers, présenter un compte rendu avec 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr ""
+msgstr "L'interface du programme peut définir l'indicateur « affichage forcé » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13771,7 +13771,7 @@ msgstr "La valeur ne respecte pas la structure générale des balises de langues
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "La valeur pour dériver l'indicateur « affichage forcé » pour les sous-titres de noms de fichiers doit être une expression régulière valide."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
