program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -11892,11 +11892,9 @@ msgid "Stop at the first cluster"
 msgstr "Atura al primer clúster"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:54
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
-"  --stop-after-video-ends Deixa de processar una vegada finalitzi la pista de vídeo\n"
-"                           principal, descartant els paquets restants d'altres pistes.\n"
+msgstr "Deixa de processar un cop finalitza la pista de vídeo principal, descartant els paquets restants d'altres pistes."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
