program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-07-27 13:21+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Casper, 2023\n"
+"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2023\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -5084,7 +5084,7 @@ msgstr "Transferencia de color"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr "Foro de la comunidad && y &ayuda"
+msgstr "Foro de la comunidad && y a&yuda"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
@@ -5823,9 +5823,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Dependiendo de esta configuración, el idioma puede ser generado a partir del nombre del archivo si el idioma en el archivo de origen es 'Indeterminado' ('und')."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Generar idioma de pista a partir del nombre de los archivos"
+msgstr "Deducir el in&dicador de \"visualización forzada\" de los subtítulos a partir de los nombres de archivo:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -11935,11 +11935,9 @@ msgid "Stop at the first cluster"
 msgstr "Parar en el primer clúster"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:54
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
-"--stop-after-video-ends Detiene el procesamiento cuando finaliza la pista de vídeo principal,\n"
-"                          descartando cualquier paquete restante de otras pistas.\n"
+msgstr "Detiene el procesamiento una vez finalizada la pista de vídeo principal, descartando los paquetes restantes de otras pistas."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
@@ -11976,7 +11974,7 @@ msgstr "Propiedades de subtítulo y capítulo"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:518
 #, no-c-format
 msgid "Subtitle files often contain the word 'forced' in their file name to signal that they're intended for 'forced display' only (e.g. when they speak Elfish in 'Lord of the Rings')."
-msgstr ""
+msgstr "A menudo, los archivos de subtítulos contienen en su nombre la palabra \"forzados\" para indicar que únicamente son empleados para la \"visualización forzada\" (por ejemplo, cuando hablan élfico en \"El Señor de los Anillos\")."
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:56
 #, no-c-format
@@ -12224,7 +12222,7 @@ msgstr "La GUI puede analizar estos archivos, y mostrar los resultados incluyend
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr ""
+msgstr "La interfaz gráfica de usuario puede activar la opción \"visualización forzada\" para estas pistas si el nombre del archivo coincide con esta expresión regular."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13853,7 +13851,7 @@ msgstr "El valor no sigue la estructura general de las etiquetas de idioma IETF 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "El valor para deducir el indicador de \"visualización forzada\" de los subtítulos, a partir de los nombres de archivo, debe ser una expresión regular válida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
