program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -11854,11 +11854,9 @@ msgid "Stop at the first cluster"
 msgstr "Arrêter à la première grappe"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:54
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
-"  --stop-after-video-ends  Arrête l'exécution dès que la fin de la première piste vidéo est atteinte,\n"
-"                           en ignorant tous les paquets suivants des autres pistes.\n"
+msgstr "Arrête le processus après la fin de la piste vidéo principale. Tous les paquets restants de toutes les autres pistes seront ignorés."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
