program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -11875,11 +11875,9 @@ msgid "Stop at the first cluster"
 msgstr "Stop al primo cluster"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:54
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
-"  --stop-after-video-ends  Interrompe l'elaborazione al termine della traccia video principale,\n"
-"                           scartando eventuali pacchetti rimanenti di altre tracce.\n"
+msgstr "Al termine della traccia video principale interrompe l'elaborazione scartando eventuali pacchetti rimanenti di altre tracce."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
