program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -11812,9 +11812,9 @@ msgid "Stop at the first cluster"
 msgstr "İlk kümede durdur"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:54
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr "Birincil görüntü izi sona erdikten sonra işlemeyi durdurur."
+msgstr "Birincil görüntü izi sona erdikten sonra, diğer izlerin kalan paketlerini yoksayarak işlemeyi durdurur."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
