NEWS, AUTHORS: update AV1 Dolby Vision info for IVF support

--- a/AUTHORS
+++ b/AUTHORS
@@ -249,7 +249,7 @@ pp Carvalho <?>
     * Brazilian Portuguese translation
 
 quietvoid <?>
-    * Reading single-layer Dolby Vision from AV1 OBU streams
+    * Reading single-layer Dolby Vision from AV1 IVF & OBU streams
     * Reading single-layer Dolby Vision from HEVC/H.265 Annex B
       bitstreams
 
