program translations: update Polish

--- a/po/pl.po
+++ b/po/pl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-07-27 13:21+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Grzegorz Pruchniakowski <gootector@o2.pl>, 2022\n"
+"Last-Translator: Grzegorz Pruchniakowski <gootector@o2.pl>, 2022-2023\n"
 "Language-Team: Polish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/pl/)\n"
 "Language: pl\n"
@@ -1957,7 +1957,7 @@ msgstr "&Pierwszy podrozdział do przenumerowania:"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2213
 #, no-c-format
 msgid "&Font && size:"
-msgstr "Czcionka i &rozmiar:"
+msgstr "&Czcionka &i rozmiar:"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:384
 #, no-c-format
@@ -2353,7 +2353,7 @@ msgstr "Po&sortuj rozdziały według ich czasów początkowych i końcowych"
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:526
 #, no-c-format
 msgid "&Start && end:"
-msgstr "Po&czątek i koniec:"
+msgstr "Po&czątek &i koniec:"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:217
 #, no-c-format
@@ -4322,9 +4322,9 @@ msgid "C&opy to clipboard"
 msgstr "K&opiuj do schowka "
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2238
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "C&ountries && regions"
-msgstr "&Państwa "
+msgstr "Kraje &i regi&ony"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:625
 #, no-c-format
@@ -4981,7 +4981,7 @@ msgstr "Przestrzeń koloru: {0}"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:690
 #, no-c-format
 msgid "Community && &help forum"
-msgstr ""
+msgstr "Społeczność &i &forum pomocy"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
@@ -5469,7 +5469,7 @@ msgstr "Bieżąca linia komend"
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:254
 #, no-c-format
 msgid "Current date && time in ISO 8601 format"
-msgstr "Bieżąca data i czas w formacie ISO 8601"
+msgstr "Bieżąca data &i czas w formacie ISO 8601"
 
 #: src/mkvtoolnix-gui/watch_jobs/tool.cpp:72
 #, no-c-format
@@ -6726,12 +6726,12 @@ msgstr "FLV (Flash Video)"
 #: src/common/audio_emphasis.cpp:53
 #, no-c-format
 msgid "FM radio in Europe"
-msgstr ""
+msgstr "Radio FM w Europie"
 
 #: src/common/audio_emphasis.cpp:54
 #, no-c-format
 msgid "FM radio in the USA"
-msgstr ""
+msgstr "Radio FM w Stanach Zjednoczonych"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:273
 #, no-c-format
@@ -6790,9 +6790,9 @@ msgid "Field order (0, 1, 2, 6, 9 or 14, see documentation)."
 msgstr "Kolejność pól (0, 1, 2, 6, 9 lub 14, patrz dokumentacja)."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2276
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "File && track colors"
-msgstr "Ścieżki segmentu"
+msgstr "Kolory plików &i ścieżek"
 
 #: src/merge/generic_reader.cpp:278
 #, no-c-format, c++-format
@@ -8294,7 +8294,7 @@ msgstr "Opis zadania"
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:245
 #, no-c-format
 msgid "Job end date && time in ISO 8601 format"
-msgstr "Data i czas zakończenia zadania w formacie ISO 8601"
+msgstr "Data &i czas zakończenia zadania w formacie ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
 #, fuzzy, no-c-format
@@ -8322,7 +8322,7 @@ msgstr "Kolejka zadań"
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
 msgid "Job start date && time in ISO 8601 format"
-msgstr "Data i czas rozpoczęcia zadania w formacie ISO 8601"
+msgstr "Data &i czas rozpoczęcia zadania w formacie ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
 #, fuzzy, no-c-format
@@ -10727,7 +10727,7 @@ msgstr "Zamień załącznik"
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:388
 #, no-c-format
 msgid "Replace attachment with a new file and &derive name && MIME type from it"
-msgstr "Zamień załącznik na nowy plik i pobierz z niego nazwę oraz typ &MIME"
+msgstr "Zamień załącznik na nowy plik &i pobierz z niego nazwę oraz typ &MIME"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:178
 #, no-c-format
@@ -11463,7 +11463,7 @@ msgstr "Pokaż postęp zadań"
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:143
 #, no-c-format
 msgid "Show job queue && access job logs"
-msgstr "Pokaż kolejkę zadań i dostęp do dzienników zadań"
+msgstr "Pokaż kolejkę zadań &i dostęp do dzienników zadań"
 
 #: src/info/info_cli_parser.cpp:42
 #, no-c-format
@@ -12034,7 +12034,7 @@ msgstr "Mówi mkvmerge, aby przerwać pracę po wyemitowaniu pierwszego ostrzeż
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:41
 #, no-c-format
 msgid "Tells mkvmerge to create a meta seek element at the end of the file containing all clusters."
-msgstr "Ta opcja mówi mkvmerge, aby utworzyć element indeksu wyszukiwania na końcu pliku zawierając wszystkie klastry."
+msgstr "Ta opcja mówi mkvmerge, aby utworzyć element indeksu wyszukiwania na końcu pliku, zawierając wszystkie klastry."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:49
 #, no-c-format
@@ -12091,7 +12091,7 @@ msgstr "Nie można dokonać analizy nagłówków FLAC: nie odnaleziono informacj
 #: src/output/p_generic_video.cpp:71
 #, no-c-format, c++-format
 msgid "The FPS is 0.0 but the reader did not provide a timestamp for a packet. {0}\n"
-msgstr "Liczba klatek na sekundę wynosi 0.0, ale moduł wczytujący nie dostarczył znaczników czasu dla pakietu. {0}\n"
+msgstr "Liczba klatek na sekundę wynosi 0,0, ale moduł wczytujący nie dostarczył znaczników czasu dla pakietu. {0}\n"
 
 #: src/merge/mkvmerge.cpp:1500
 #, no-c-format, c++-format
@@ -13136,9 +13136,9 @@ msgid "The line {0} of the timestamp file '{1}' does not contain a valid floatin
 msgstr "Linia {0} w pliku ze znacznikami czasu \"{1}\" nie zawiera prawidłowej liczby zmiennoprzecinkowej.\n"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1446
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The list of boundary characters for deriving the track language from file names must not be empty."
-msgstr "Lista uznawanych języków ścieżek w nazwach plików nie może być pusta."
+msgstr "Lista znaków granicznych do wyprowadzenia języka ścieżki z nazw plików nie może być pusta."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1458
 #, no-c-format
@@ -13605,7 +13605,7 @@ msgid ""
 "\n"
 "If you really have to specify non-sorted timestamps then use the timestamp format v4. It is identical to format v2 but allows non-sorted timestamps.\n"
 msgstr ""
-"Plik ze znacznikami czasu v2 \"{0}\" zawiera znaczniki czasu, które nie są uporządkowane. Było to wymuszone z powodu błędu w wersjach mkvmerge do wersji 1.5.0 włącznie, w ścieżkach, do których znaczniki czasu odnosiły się do klatek typu B. Rozpoczynając od wersji 1.5.1, mkvmerge traktuje teraz taką sytuację poprawnie i znaczniki czasu w plikach muszą być uporządkowane. Na przykład, kolejność klatek \"IPBBP...\" przy 25 kl/s wymaga, aby znaczniki czasu miały wartości \"0\", \"40\", \"80\", \"120\" itd., a nie \"0\", \"120\", \"40\", \"80\" itd.\n"
+"Plik ze znacznikami czasu v2 \"{0}\" zawiera znaczniki czasu, które nie są uporządkowane. Było to wymuszone z powodu błędu w wersjach mkvmerge do wersji 1.5.0 włącznie, w ścieżkach, do których znaczniki czasu odnosiły się do klatek typu B. Rozpoczynając od wersji 1.5.1, mkvmerge traktuje teraz taką sytuację poprawnie i znaczniki czasu w plikach muszą być uporządkowane. Na przykład, kolejność klatek \"IPBBP...\" przy 25 kl./s wymaga, aby znaczniki czasu miały wartości \"0\", \"40\", \"80\", \"120\" itd., a nie \"0\", \"120\", \"40\", \"80\" itd.\n"
 "\n"
 "Jeśli naprawdę musisz utworzyć nieuporządkowane znaczniki czasu, użyj formatu pliku ze znacznikami czasu w wersji v4. Jest on identyczny do formatu v2, ale pozwala na nieuporządkowane znaczniki czasu.\n"
 
@@ -14751,9 +14751,9 @@ msgid "Usage and examples"
 msgstr "Sposób użycia i przykłady"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2277
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use &file && track colors"
-msgstr "Ścieżki segmentu"
+msgstr "Użyj kolorów &plików &i ścieżek"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:193
 #, no-c-format
